Atualização de arquivos no git

--- a/index-masonry.html
+++ b/index-masonry.html
@@ -20,6 +20,8 @@
     </div>
 
 
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 
@@ -32,10 +34,10 @@
             'style_css': 'https://images.livrariasaraiva.com.br/estatico/2018/site/universo-saraiva/assets/css/style.css',
             'slick_css': 'https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css',
             'script_js': 'https://images.livrariasaraiva.com.br/estatico/2018/site/universo-saraiva/assets/js/scripts.js',
-            'masonry_js': './assets/js/masonry.pkgd.min.js'
+            'masonry_js': 'https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js'
         }
     </script>
-    <script src="https://images.livrariasaraiva.com.br/estatico/2018/site/universo-saraiva/assets/js/load_dependencies.js?123ssss"></script>
+    <script src="https://images.livrariasaraiva.com.br/estatico/2018/site/universo-saraiva/assets/js/load_dependencies.js?123sssssss"></script>
 </body>
 
 </html>
