adição de botão de ver mais para lista de livros

--- a/index-masonry.html
+++ b/index-masonry.html
@@ -31,13 +31,13 @@
             'menu_css': 'https://images.livrariasaraiva.com.br/estatico/2018/bibliotecas/menu_hotsite/assets/css/style-menu.css',
             'script_menu': 'https://images.livrariasaraiva.com.br/estatico/2018/bibliotecas/menu_hotsite/assets/js/script-menu-hotsite.js',
             'grid_css': 'https://images.livrariasaraiva.com.br/estatico/biblioteca/grid_hotsite/css/bootstrap-grid.min.css',
-            'style_css': 'https://images.livrariasaraiva.com.br/estatico/2018/site/universo-saraiva/assets/css/style.css',
+            'style_css': './assets/css/style.css',
             'slick_css': 'https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css',
-            'script_js': 'https://images.livrariasaraiva.com.br/estatico/2018/site/universo-saraiva/assets/js/scripts.js',
+            'script_js': './assets/js/scripts.js',
             'masonry_js': 'https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js'
         }
     </script>
-    <script src="https://images.livrariasaraiva.com.br/estatico/2018/site/universo-saraiva/assets/js/load_dependencies.js?123sssssss"></script>
+    <script src="./assets/js/load_dependencies.js?123sssssss"></script>
 </body>
 
 </html>
