Atualização universo saraiva

--- a/index-masonry.html
+++ b/index-masonry.html
@@ -16,7 +16,7 @@
         {"nome":"Marcas","href":"marcas"},
         {"nome":"Listas","href":"editoras"},
         {"nome":"Autores","href":"autores"},
-        {"nome":"Páginas Especiais","href":"paginas_especiais"}]'></section>
+        {"nome":"Todas as Páginas","href":"paginas_especiais"}]'></section>
     </div>
 
 
@@ -29,7 +29,7 @@
         var params = {
             'path_s3': 'https://images.livrariasaraiva.com.br/estatico/2018/site/universo-saraiva/',
             'menu_css': 'https://images.livrariasaraiva.com.br/estatico/2018/bibliotecas/menu_hotsite/assets/css/style-menu.css',
-            'script_menu': 'https://images.livrariasaraiva.com.br/estatico/2018/bibliotecas/menu_hotsite/assets/js/script-menu-hotsite.js',
+            'script_menu': '../menu_hotsite/assets/js/script-menu-hotsite.js',
             'grid_css': 'https://images.livrariasaraiva.com.br/estatico/biblioteca/grid_hotsite/css/bootstrap-grid.min.css',
             'style_css': './assets/css/style.css',
             'slick_css': 'https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css',
