Inclusão de ancoras

--- a/v2/index.html
+++ b/v2/index.html
@@ -34,9 +34,11 @@
 
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="https://images.livrariasaraiva.com.br/estatico/2018/site/universo-saraiva/v2/assets/js/select2.full.min.js"></script>
+    <!--script src="https://images.livrariasaraiva.com.br/estatico/2018/bibliotecas/menu_hotsite/assets/js/script-menu-hotsite.js"></script-->
     <script src="./assets/js/scripts.js"></script>
-    <script src="https://images.livrariasaraiva.com.br/estatico/2018/bibliotecas/menu_hotsite/assets/js/script-menu-hotsite.js"></script>
-    <!-- <script src="../../menu_hotsite/assets/js/script-menu-hotsite.js"></script> -->
+    
+    
+    <script src="../../menu_hotsite/assets/js/script-menu-hotsite.js"></script>
 </body>
 
 
